--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "antd": "^3.12.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
